8356695: java/lang/StringBuilder/HugeCapacity.java failing with OOME
Backport-of: 0f5c608143413bc0d40fca31e097c7b40c7a6618